chore: fix dark mode color. add top padding on all pages

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,7 @@
   @tailwind components;
   @tailwind utilities;
 }
+
+.p-menuitem-content {
+  background-color: transparent;
+}
